# user-registration-api-fastapi

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  architecture.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  exceptions.py  security.py
app/db/: pool.py  schema.sql  schema_loader.py
app/email/: client.py  fake_client.py
app/users/: records.py  repository.py  router.py  schemas.py  service.py
tests/: conftest.py  test_activation.py  test_health.py  test_registration.py
